--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
   --primary-margin-bottom: 32px;
   --left-margin: 24px;
   --top-margin: 48px;
-  --font-size: 16px;
+  --size-16px: 16px;
 }
 
 /* common style values */
@@ -36,7 +36,7 @@ body {
   margin-right: auto;
 
   font-family: "Roboto", "sans-serif";
-  font-size: var(--font-size);
+  font-size: var(--size-16px);
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   background-color: var(--primary-color);
@@ -167,14 +167,28 @@ img {
 
 /* "hero" */
 .hero {
-  padding-top: 192px;
-  padding-bottom: 192px;
   margin: 0 auto;
   text-align: center;
 }
 
+.overlay {
+  padding-top: 192px;
+  padding-bottom: 192px;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 1600px;
+  min-height: 603px;
+
+  background-image: linear-gradient(to right,
+      rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url("../images/people-office.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1600px;
+}
+
 .hero .container {
-  width: 492px;
+  width: 522px;
 }
 
 .hero,
@@ -193,7 +207,7 @@ img {
 .filter-button {
   font-family: inherit;
   font-weight: var(--second-font-weight);
-  font-size: var(--font-size);
+  font-size: var(--size-16px);
   line-height: 1.5;
   background-color: var(--backgrounds-color);
   color: var(--botton-hover-color);
@@ -232,7 +246,6 @@ img {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-
 /* section "peculiarities" */
 .peculiarities-list,
 .service-list,
@@ -245,6 +258,60 @@ img {
 .service,
 .portfolio-main {
   background-color: var(--primary-color);
+}
+
+.peculiarities-item::before {
+  display: flex;
+  content: "";
+  height: 112px;
+  /* align-items: center;
+  justify-content: center; */
+  margin-bottom: 8px;
+  background-color: var(--backgrounds-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-size: contain; */
+  border-radius: 4px;
+
+
+  /* content: "";
+  display: block;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+
+  background-color: var(--backgrounds-color);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px; */
+}
+
+/* padding: 24px 100px; */
+
+/* мусор */
+/* .peculiarities-svg::before {
+  width: 64px;
+  height: 64px;
+} */
+
+.icon-strategy::before {
+  background-image: url("../images/antenna.svg");
+  /* background-image: url('C:/Users/АДМИН/Desktop/Служебные/Доп мне/Для HTML/goit-markup-hw-04/imagesicons.svg#antenna'); */
+  /* background-image: url("../images/img1.jpg"); */
+  /* background-image: url('../images/icons.svg#antenna'); */
+}
+
+.icon-punctuality::before {
+  background-image: url("../images/clock.svg");
+}
+
+.icon-diligence::before {
+  background-image: url("../images/diagram.svg");
+}
+
+.icon-technologies::before {
+  background-image: url("../images/astronaut.svg");
 }
 
 .visually-hidden {
@@ -285,7 +352,8 @@ img {
 .peculiarities-item:not(:last-child),
 .service-item:not(:last-child),
 .card:not(:last-child),
-.filter-item:not(:last-child) {
+.filter-item:not(:last-child),
+.team-cards .svg-item:not(:last-child) {
   margin-right: var(--left-margin);
 }
 
@@ -296,7 +364,7 @@ img {
 
 .paragraph-text,
 .text-explanation {
-  font-size: var(--font-size);
+  font-size: var(--size-16px);
   line-height: 1.5;
 }
 
@@ -319,18 +387,127 @@ img {
 }
 
 .card-block {
-  padding: var(--primary-margin-bottom) var(--font-size);
+  padding: 32px 0px 36px 0px;
 }
 
-.project-card-block {
-  padding-top: var(--primary-margin-bottom);
-  padding-bottom: var(--primary-margin-bottom);
+.f-size {
+  font-size: 0;
 }
+
+.card-block .f-size {
+  margin-top: 12px;
+}
+
+.svg-item {
+  display: inline-flex;
+}
+
+.div-card {
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  contain: content;
+  /* background-color: var(--botton-hover-color); */
+  border-radius: 50%;
+}
+
+.card-block .div-card {
+  background-color: var(--botton-hover-color);
+}
+
+
+.div-card:hover,
+.div-card:focus,
+.div-card:active,
+.footer .div-card:hover,
+.footer .div-card:focus,
+.footer .div-card:active {
+  background-color: #31D0AA;
+}
+
+
+.card-svg {
+  width: 16px;
+  height: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+.social-networks-item {
+  content: "";
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+} */
+
+/* .card-block .social-networks-item {
+  margin-top: 12px;
+  background-color: var(--botton-hover-color);
+}
+
+.social-networks-item:hover,
+.social-networks-item:focus,
+.social-networks-item:active,
+.footer-list .social-networks-item:hover,
+.footer-list.social-networks-item:focus,
+.footer-list.social-networks-item:active {
+  background-color: #31D0AA;
+} */
+
+.icon-card {
+  margin: 0 auto;
+  width: 16px;
+  height: 16px;
+}
+
+/* "Customers" */
+
+
+
+
+/* ----------------------- */
+
+
+
+
+
+
+
+
 
 /* "footer" */
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer .container {
+  display: flex;
+}
+
+.footer-list {
+  display: flex;
 }
 
 .footer .logo-part2 {
@@ -343,9 +520,29 @@ img {
 }
 
 .text-explanation {
-  margin-top: var(--font-size);
+  margin-top: var(--size-16px);
   width: 264px;
   color: var(--footer-p-color);
+}
+
+.social-media-item {
+  margin-left: 120px;
+}
+
+.social-media-header {
+  color: var(--primary-color);
+}
+
+.footer .svg-item:not(:last-child) {
+  margin-right: var(--size-16px);
+}
+
+.footer-list .f-size {
+  margin-top: var(--size-16px);
+}
+
+.footer .div-card {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* "Portfolio page"  */
@@ -409,9 +606,154 @@ img {
 }
 
 .project-card-block {
-  padding: var(--primary-margin-bottom) var(--font-size);
+  padding: var(--primary-margin-bottom) var(--size-16px);
 
   border-right: 0.5px solid var(--backgrounds-color);
   border-left: 0.5px solid var(--backgrounds-color);
   border-bottom: 0.5px solid var(--backgrounds-color);
 }
+
+
+
+
+
+
+
+
+
+/* 
+.links {
+  display: flex;
+  /* display: inline-block; */
+/* align-items: center; */
+/* text-align: center;
+  justify-content: center; */
+/* flex-basis: calc((100% - 5 * var(--left-margin)) / 6);
+  background-color: aqua;
+  width: 168px;
+  height: 88px; */
+/* padding: 16px 32px; */
+
+/* } */
+
+
+
+/* "Customers" */
+.customers-list {
+  /* display: inline-flex; */
+  display: flex;
+  justify-content: center;
+}
+
+.customers-item {
+  width: 168px;
+  height: 88px;
+}
+
+.customers-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+/* .icon-links .customers-svg:hover {
+  fill: #31D0AA;
+} */
+
+/* .dd {
+  width: 100px;
+  height: 50px;
+
+} */
+
+.icon-links {
+  content: "";
+  display: block;
+  /* width: 168px;
+  height: 88px; */
+  width: 104px;
+  height: 56px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+
+  fill: #8E8F99;
+}
+
+.customers-svg {
+  display: block;
+  /* width: 168px;
+  height: 88px; */
+
+  width: 104px;
+  height: 56px;
+  /* contain: content; */
+
+
+  /* padding: 16px 32px; */
+  /* border: 1px solid #8E8F99;
+  border-radius: 4px; */
+  /* fill: red; */
+}
+
+.icon-links:hover,
+.icon-links:focus,
+.icon-links:active {
+  border-color: var(--botton-hover-color);
+  fill: var(--botton-hover-color);
+}
+
+
+
+.link-client {
+  content: "";
+
+  /* display: inline-block; */
+  /* align-items: center; */
+  /* margin: 0;
+  padding: 0; */
+  /* width: 104px;
+  height: 66px; */
+  /* flex-basis: calc((100% - 5 * var(--left-margin)) / 6); */
+  /* background-color: aqua; */
+  /* background-image: url("../images/icons.svg"); */
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px;
+}
+
+
+/* .ddd {
+  display: block;
+  list-style: none;
+  list-style-image: none;
+} */
+/* 
+.action {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  contain: content;
+
+  outline: 1px solid black;
+  /* list-style: none; */
+/* } */
+/* 
+.button2 {
+  padding: 0;
+  border: none;
+  margin-right: 50px;
+  width: 250px;
+  height: 150px;
+  padding: 5px;
+  background-color: orange;
+}
+
+
+.button2-icon {
+  width: 170px;
+  height: 80px;
+
+  stroke: #404bbf;
+  fill: red;
+} */
